Bug 1618705: Construct column containers and list them as children of our table accessible. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D67900

--HG--
extra : moz-landing-system : lando