accessible/mac/mozTableAccessible.h
@@ -7,15 +7,39 @@
 
 #import "mozAccessible.h"
 
+@interface mozColumnContainer : NSObject {
+  uint32_t mIndex;
+  mozAccessible* mParent;
+  NSMutableArray* mChildren;
+}
+
+- (id)initWithIndex:(uint32_t)aIndex andParent:(id<mozAccessible>)aParent;
+- (NSString*)accessibilityRole;
+- (NSString*)accessibilityRoleDescription;
+- (mozAccessible*)accessibilityParent;
+- (NSArray*)accessibilityChildren;
+- (BOOL)accessibilityIsIgnored;
+- (void)invalidateChildren;
+- (void)dealloc;
+- (void)expire;
+- (BOOL)isExpired;
+- (BOOL)accessibilityNotifiesWhenDestroyed;
+@end
+
 @interface mozTablePartAccessible : mozAccessible
 - (id)accessibilityAttributeValue:(NSString*)attribute;
 - (BOOL)isLayoutTablePart;
 - (NSString*)role;
 @end
 
-@interface mozTableAccessible : mozTablePartAccessible
+@interface mozTableAccessible : mozTablePartAccessible {
+  NSMutableArray* mColContainers;
+}
+- (NSArray*)children;
 - (NSArray*)additionalAccessibilityAttributeNames;
 - (id)accessibilityAttributeValue:(NSString*)attribute;
+- (void)invalidateChildren;
+- (void)dealloc;
 @end
 
 @interface mozTableRowAccessible : mozTablePartAccessible
